package com.github.bingoohuang.blackcat.sdk.protobuf;

// compile with:
// protoc --java_out=../blackcat-sdk/src/main/java/ BlackcatMsg.proto
// protoc --java_out=/Users/bingoohuang/github/blackcat-sdk/src/main/java/ src/main/resources/com/github/bingoohuang/blackcat/sdk/protobuf/BlackcatMsg.proto

option java_package = "com.github.bingoohuang.blackcat.sdk.protobuf";

option java_outer_classname = "BlackcatMsg";

message BlackcatReqHead {
    enum ReqType {
        BlackcatMemory = 0;
        BlackcatFileStores = 1;
        BlackcatLoad = 2;
        BlackcatProcess = 3;
        BlackcatConfig = 4;
        BlackcatMethodRuntime = 5;
        BlackcatFileSystemUsage = 6;
        BlackcatNetStat = 7;
        BlackcatJSON = 8;
        BlackcatTrace = 9;
        BlackcatMetric = 10;
    }
    required ReqType reqType = 1;
    required string hostname = 2;
    required uint64 timestamp = 3;
}

// 请求消息
message BlackcatReq {
    required BlackcatReqHead blackcatReqHead = 1;
    optional BlackcatMemory blackcatMemory = 2;
    optional BlackcatFileStores blackcatFileStores = 3;
    optional BlackcatLoad blackcatLoad = 4;
    optional BlackcatProcess blackcatProcess = 5;
    optional BlackcatMethodRuntime blackcatMethodRuntime = 6;
    optional BlackcatFileSystemUsage blackcatFileSystemUsage = 7;
    optional BlackcatNetStat blackcatNetStat = 8;
    optional BlackcatJSON blackcatJSON = 9;
    optional BlackcatTrace blackcatTrace = 10;
    optional BlackcatMetric blackcatMetric = 11;
}

message BlackcatRspHead {
    enum RspType {
        BlackcatEvent = 0;
        BlackcatWarnConfig = 1;
    }

    required RspType rspType = 1;
}

message BlackcatWarnConfig {
    message BlackcatWarnProcess {
        required string processName = 1; // 进程名称
        repeated string processKeys = 2; // 进程识别关键字
    }

    repeated BlackcatWarnProcess blackcatWarnProcess = 1;
}

// 响应消息
message BlackcatRsp {
    required BlackcatRspHead blackcatRspHead = 1;
    optional BlackcatWarnConfig blackcatWarnConfig = 2; // 响应监控设置参数
}

message BlackcatMemory {
    required uint64 total = 1;
    required uint64 available = 2;
}

message BlackcatFileStores {
    message FileStore {
        required string name = 1;
        required string description = 2;
        required uint64 total = 3;
        required uint64 usable = 4;
    }

    repeated FileStore fileStore = 1;
}

message BlackcatLoad {
    required uint32 cpuNum = 1;
    // Load meaning, pls refer http://blog.scoutapp.com/articles/2009/07/31/understanding-load-averages
    required float oneMinAvg = 2;
    required float fiveMinsAvg = 3;
    required float fifteenMinsAvg = 4;
}

message BlackcatProcess {
    message Proc {
        required uint64 pid = 1;
        required string args = 2;
        // http://mugurel.sumanariu.ro/linux/the-difference-among-virt-res-and-shr-in-top-output/
        // RES stands for the resident size,
        // which is an accurate representation
        // of how much actual physical memory a process is consuming.
        // (This also corresponds directly to the %MEM column.)
        required uint64 res = 3;
        required uint64 startTime = 4;
        required string name = 5; // 进程名称
    }

    repeated Proc proc = 1;
}

message BlackcatMethodRuntime {
    required string pid = 1;
    required string executionId = 2;
    required uint64 startMillis = 3;
    required uint64 endMillis = 4;
    required uint64 costNano = 5;

    required string className = 6;
    required string methodName = 7;
    required string methodDesc = 8;
    required string args = 9;
    required string result = 10;
    optional string throwableCaught = 11;
    optional string throwableUncaught = 12;
    required bool sameThrowable = 13;
    required string invokeId = 14;
}

message BlackcatFileSystemUsage {
    message Usage {
        required string devName = 1;
        required string dirName = 2;
        required uint64 diskReads = 3;
        required uint64 diskWrites = 4;
        required uint64 diskReadBytes = 5;
        required uint64 diskWriteBytes = 6;
        required double diskQueue = 7;
        required double diskServiceTime = 8;
        required uint64 avail = 9;
        required uint64 used = 10;
        required uint64 total = 11;
        required double usePercent = 12;
        required uint64 free = 13;
        required uint64 freeFiles = 14;
        required uint64 files = 15;
    }

    repeated Usage usage = 1;
}

message BlackcatNetStat {
    required uint32 tcpInboundTotal = 1;
    required uint32 tcpOutboundTotal = 2;
    required uint32 allInboundTotal = 3;
    required uint32 allOutboundTotal = 4;
    required uint32 tcpEstablished = 5;
    required uint32 tcpSynSent = 6;
    required uint32 tcpSynRecv = 7;
    required uint32 tcpFinWait1 = 8;
    required uint32 tcpFinWait2 = 9;
    required uint32 tcpTimeWait = 10;
    required uint32 tcpClose = 11;
    required uint32 tcpCloseWait = 12;
    required uint32 tcpLastAck = 13;
    required uint32 tcpListen = 14;
    required uint32 tcpClosing = 15;
    required uint32 tcpIdle = 16;
    required uint32 tcpBound = 17;
}

message BlackcatJSON {
    required string schema = 1;
    required string json = 2;
}

message BlackcatTrace {
    required string traceId = 1;
    required string linkId = 2;
    required string msgType = 3;
    required string msg = 4;
}

message BlackcatMetric {
    required string name = 1;
    required uint64 value = 2;
}
